New Content added

--- a/Assignment/index1.html
+++ b/Assignment/index1.html
@@ -67,15 +67,17 @@
         <h2>Push </h2>
         <p> <b>git push</b> command is used to upload local repository content to a remote repository. Pushing is how you transfer
              commits from your local repository to a remote repository. </p>
-             <img src="push.png" alt="ERROR">
-             <h2>Pull</h2>
-             <p> <b>git pull</b> command is used to fetch and download content from a remote repository 
+        <img src="push.png" alt="ERROR">
+       <h2>Pull</h2>
+        <p> <b>git pull</b> command is used to fetch and download content from a remote repository 
                 and immediately update the local repository to match that content. </p>
-                  <img src="pull.png" alt="ERROR">
-                  <p>After pull  repository(Workshop1) show in local folder</p>
-                  <img src="pull1.png" alt="ERROR">
-                  <p>View of repository after push</p>
-                  <img src="WS.png" alt="ERROR!">
+        <img src="pull.png" alt="ERROR">
+       <p>After pull  repository(Workshop1) show in local folder</p>
+       <img src="pull1.png" alt="ERROR">
+      <p>View of repository after push</p>
+     <img src="WS.png" alt="ERROR!">
+        <p> Content of file in repository </p>
+        <img src="content.png" alt="ERROR">
 
 
 
