--- a/Assignment/index1.html
+++ b/Assignment/index1.html
@@ -18,34 +18,34 @@
 </style>
 <body>
     <div class = "class1">
-        <h1>Git Commands</h1>
-        <h2>1. Version</h2>
+        <h1><center>Git Commands</center></h1>
+        <h2> Version command</h2>
         <p>By <b>git --version</b> command , the git version can be check.</p>
         <img src="version.png" alt="ERROR!">
-        <h2>2. Help</h2>
+        <h2> Help <command></h2>
         <p>By <b>git --help</b> command , all basic git commands can be show with description.</p>
         <img src="help.png" alt="ERROR!">
-        <h2>3. Init</h2>
+        <h2>Init <command></h2>
         <p>By <b>git init</b> command  a new Git repository is created. It can be used to convert an existing, 
              project to a Git repository or initialize a new, empty repository</p>
         <img src="init.png" alt="ERROR!">
-        <h2>4. Status</h2>
+        <h2> Status <command></h2>
         <p>By <b>git status</b> command the state of the working directory display and the staging area. 
             It lets you see which changes have been staged, which haven't, and which files are tracked by Git and which are not.</p>
         <img src="status.png" alt="ERROR!">
-        <h2>5. Add</h2>
+        <h2> Add <command></h2>
         <p><b>git add . </b>  command adds a change in the working directory to the staging area.
              It tells Git that you want to include updates to a all file in the next commit.</p>
         <img src="add1.png" alt="ERROR!">
         <p><b>git add  </b> FileName(test.file) command adds a change in the working directory and
              updates to a particular file in the next commit.</p>
        <img src="add2.png" alt="ERROR!">
-       <h2>6. rm cached</h2>
+       <h2> rm cached <command></h2>
         <p><b>git rm --cached  </b> flag removes a file from the staging area. The files in the 
             working directory will remain. This means that you'll still have a copy of the file locally but
              the file will be removed from the tracking on your Git project. </p>
         <img src="cached.png" alt="ERROR!">
-        <h1>GitHub</h1>
+        <h1><center>GitHub</center></h1>
         <h2>Explore GitHub</h2>
         <p>Explore the GitHub to see the latest repository and developers.Also see repositories according to interset and trending repositories .</p>
         <img src="github.png" alt = "ERROR!">
@@ -61,30 +61,29 @@
              in a new directory and at another location. The original repository can be located on the local file system
               or on remote machine and accessible supported protocols.The git clone command copies an existing Git repository.</p>
         <img src="clone.png" alt = "ERROR!">
-        <h2>Change content</h2>
-            <P>Change file at  local repository</P>
-            <img src="change1.png" alt="ERROR">
-        <h2>Push </h2>
+        <h2>Push Command</h2>
         <p> <b>git push</b> command is used to upload local repository content to a remote repository. Pushing is how you transfer
              commits from your local repository to a remote repository. </p>
         <img src="push.png" alt="ERROR">
-       <h2>Pull</h2>
+        <img src="push3.png" alt="ERROR">
+        <h3>View of repository after push</h3>
+        <img src="WS.png" alt="ERROR!">
+        <h3> Content of file in repository </h3>
+        <img src="content.png" alt="ERROR">
+
+        <h3> Commiting changes into repository </h3>
+        <img src="send.png" alt="ERROR">
+
+        <h3> View of repository after  push repository </h3>
+        <img src="check.png" alt="ERROR">
+        <h3> Track of changes </h3>
+        <img src="track1.png" alt="ERROR">
+        <h2>Pull <command></h2>
         <p> <b>git pull</b> command is used to fetch and download content from a remote repository 
                 and immediately update the local repository to match that content. </p>
         <img src="pull.png" alt="ERROR">
-       <p>After pull  repository(Workshop1) show in local folder</p>
-       <img src="pull1.png" alt="ERROR">
-      <p>View of repository after push</p>
-     <img src="WS.png" alt="ERROR!">
-        <p> Content of file in repository </p>
-        <img src="content.png" alt="ERROR">
-
-
-
-
-
+        <h3>After pull  repository(Workshop1) show in local folder</h3>
+        <img src="pull1.png" alt="ERROR">
     </div>
-
-
 </body>
 </html>
