--- a/Assignment/index1.html
+++ b/Assignment/index1.html
@@ -84,6 +84,11 @@
         <img src="pull.png" alt="ERROR">
         <h3>After pull  repository(Workshop1) show in local folder</h3>
         <img src="pull1.png" alt="ERROR">
+        <h1>Branching</h1>
+        <h2>Create a branch</h2>
+        <img src="branching.png" alt="error!">
+        <h2>Switch to main branch </h2>
+        <img src="branch1.png" alt="error!">
     </div>
 </body>
 </html>
